--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>JavaScript</title>
 </head>
 <body>    
-    <script defer>
-        console.log("Hello World!");
-    </script>
+    <script src="./src/script.js"></script>
 </body>
 
 </html>
