--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>JavaScript</title>
 </head>
 <body>    
-    <script src="./src/script.js"></script>
+    <script defer; src="./src/script.js">
+
+    </script>
+    <script defer> console.log("Hello, World!");</script>
 </body>
 
 </html>
